--- a/project/.gitignore
+++ b/project/.gitignore
@@ -1,5 +1,9 @@
 /bootstrap/compiled.php
 /vendor
+/bower_components
+/node_modules
+/.sass-cache
+npm-debug.log
 composer.phar
 composer.lock
 .env.*.php
