Created the application structure and added a lot of views for the created actions

--- a/project/public/.htaccess
+++ b/project/public/.htaccess
@@ -4,6 +4,10 @@
     </IfModule>
 
     RewriteEngine On
+    RewriteBase /
+
+    #Options -Indexes
+    #Options +FollowSymLinks
 
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
