--- a/project/bower.json
+++ b/project/bower.json
@@ -2,6 +2,8 @@
   "name": "GruntRocks",
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "flot": "~0.8.3",
+    "dropzone": "~3.12.0"
   }
 }
