--- a/project/bower.json
+++ b/project/bower.json
@@ -5,5 +5,8 @@
     "fontawesome": "~4.2.0",
     "flot": "~0.8.3",
     "dropzone": "~3.12.0"
+  },
+  "devDependencies": {
+    "regula": "git://github.com/vivin/regula.git#~1.3.4"
   }
 }
