--- a/project/package.json
+++ b/project/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-phpunit": "^0.3.6",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "regula": "git://github.com/vivin/regula.git"
   }
 }
