--- a/project/package.json
+++ b/project/package.json
@@ -26,6 +26,7 @@
   "copyright": "",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.6.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.1",
     "grunt-contrib-concat": "^0.5.0",
@@ -36,7 +37,12 @@
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-phpunit": "^0.3.6",
+    "grunt-react": "^0.12.1",
     "matchdep": "^0.3.0",
     "regula": "git://github.com/vivin/regula.git"
+  },
+  "dependencies": {
+    "react": "^0.13.1",
+    "react-router": "^0.13.2"
   }
 }
