--- a/project/composer.json
+++ b/project/composer.json
@@ -7,13 +7,18 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"phpunit/phpunit": "3.7.*",
-		"doctrine/dbal": "2.4.*"
+		"doctrine/dbal": "2.4.*",		
+		"monarobase/country-list": "dev-master",
+		"propaganistas/laravel-phone": "~1.2",
+		"intervention/image": "^2.2"
 	},
 	"autoload": {
 		"classmap": [
 			"app/commands",
 			"app/controllers",
 			"app/models",
+			"app/services",
+			"app/facades",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
