--- a/project/package.json
+++ b/project/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/sergey-donchenko/adplus",
   "copyright": "",
   "devDependencies": {
+    "backbone": "^1.2.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.6.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -33,13 +34,15 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-phpunit": "^0.3.6",
     "grunt-react": "^0.12.1",
     "matchdep": "^0.3.0",
-    "regula": "git://github.com/vivin/regula.git"
+    "regula": "git://github.com/vivin/regula.git",
+    "requirejs": "^2.1.19"
   },
   "dependencies": {
     "react": "^0.13.1",
