--- a/project/package.json
+++ b/project/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/sergey-donchenko/adplus",
   "copyright": "",
   "devDependencies": {
+    "babelify": "^6.3.0",
     "coffeeify": "^1.1.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.6.0",
@@ -40,6 +41,7 @@
     "grunt-es6-module-transpiler": "^0.6.0",
     "grunt-phpunit": "^0.3.6",
     "grunt-react": "^0.12.1",
+    "jquery": "^2.1.4",
     "matchdep": "^0.3.0",
     "regula": "git://github.com/vivin/regula.git"
   },
